[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/Actor.gd" type="Script" id=1]
[ext_resource path="res://assets/indy/tile72.png" type="Texture" id=2]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Actor" type="Node2D"]
script = ExtResource( 1 )

[node name="Character" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )

[node name="ColorRect" type="ColorRect" parent="Character"]
visible = false
show_behind_parent = true
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
color = Color( 0, 0.729412, 0.14902, 0.533333 )

[node name="Attack_N" type="AnimatedSprite" parent="."]
position = Vector2( 0, -32 )
frames = SubResource( 6 )

[node name="ColorRect" type="ColorRect" parent="Attack_N"]
visible = false
show_behind_parent = true
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
color = Color( 0.552941, 0.729412, 0, 0.533333 )

[node name="Attack_S" type="AnimatedSprite" parent="."]
position = Vector2( 0, 32 )
frames = SubResource( 6 )

[node name="ColorRect" type="ColorRect" parent="Attack_S"]
visible = false
show_behind_parent = true
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
color = Color( 0.552941, 0.729412, 0, 0.533333 )

[node name="Attack_W" type="AnimatedSprite" parent="."]
position = Vector2( -32, 0 )
frames = SubResource( 6 )

[node name="ColorRect" type="ColorRect" parent="Attack_W"]
visible = false
show_behind_parent = true
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
color = Color( 0.552941, 0.729412, 0, 0.533333 )

[node name="Attack_E" type="AnimatedSprite" parent="."]
position = Vector2( 32, 0 )
frames = SubResource( 6 )

[node name="ColorRect" type="ColorRect" parent="Attack_E"]
visible = false
show_behind_parent = true
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
color = Color( 0.552941, 0.729412, 0, 0.533333 )

[connection signal="animation_finished" from="Character" to="." method="_on_Character_animation_finished"]
